--- a/templates/candyList.html
+++ b/templates/candyList.html
@@ -1,3 +1,5 @@
 <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch" ng-style="{'background-color': candy.color}"><strong>{{candy.name | uppercase }} - {{candy.price | currency}} - Color: {{candy.color}} - Fruity: {{candy.fruity | checkmark}}</strong>
 </div>
 <!-- [orderBy:'-name'], [orderBy:'name':true] :two ways to order by descending-->
+<!-- ng-if; show which ever satisfy the condition "candy.price > 0.5"-->
+<!-- ng-show is same as ng-if; however, it works in pair with ng-hide; which hides the entry which doesnot satisfy the condition -->
